# api/swagger/auth.json
@@ -66,5 +66,91 @@
    }
   }
 }
+},
+"/api/user/forgot-password": {
+ "post": {
+  "summary": "Forgot pasword",
+  "description": "Forgot password it is and endpoint that send an email to user for recover his password",
+  "operationId": "forgotPassword",
+  "parameters": [
+   {
+    "name": "email",
+    "in": "formData",
+    "description": "The user email",
+    "required": true,
+    "type": "string"
+  }
+  ],
+  "responses": {
+   "200": {
+    "description": "Send email with token for recover password successful!"
+   },
+   "404": {
+    "description": "Route not found"
+   },
+   "500": {
+    "description": "Something went wrong"
+   }
+  }
+}
+},
+"/api/user/reset-password/{token}": {
+ "get": {
+  "summary": "Verify token token reset password",
+  "description": "We need to verify if user's token is valid to try reset his password.",
+  "operationId": "getResetPassword",
+  "parameters": [
+   {
+    "name": "token",
+    "in": "path",
+    "description": "Token for recover password",
+    "required": true,
+    "type": "string"
+  }
+  ],
+  "responses": {
+   "200": {
+    "description": "Valid token!"
+   },
+   "404": {
+    "description": "Route not found"
+   },
+   "500": {
+    "description": "Something went wrong | Invalid token"
+   }
+  }
+},
+"post": {
+ "summary": "Reset password",
+ "description": "Reset password to user",
+ "operationId": "postResetPassword",
+ "parameters": [
+  {
+   "name": "token",
+   "in": "path",
+   "description": "Token for recover password",
+   "required": true,
+   "type": "string"
+ },
+ {
+  "name": "password",
+  "in": "formData",
+  "description": "The new user password",
+  "required": true,
+  "type": "string"
+}
+ ],
+ "responses": {
+  "200": {
+   "description": "Reset password went successful!"
+  },
+  "404": {
+   "description": "Route not found"
+  },
+  "500": {
+   "description": "Something went wrong | Invalid token"
+  }
+ }
+}
 }
 }
